--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Divinity - Church, Non Profit and Charity Events HTML Template</title>
+    <title>Moses Christian Ministry</title>
 
     <!-- CSS files -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,400i,700,700i,800,900%7CPlayfair+Display:400,400i,700,700i,900" rel="stylesheet">
@@ -14,9 +14,7 @@
 
     <!-- Fav Icons -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="230x230" href="assets/favicon/favicon-230x230.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
 
     <link rel="shortcut icon" href="assets/favicon/favicon.ico">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
@@ -25,16 +23,6 @@
             emailjs.init("user_svNIEe1up7PZ8T31wVhCm");
         })();
     </script>
-    <!-- <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                // generate the contact number value
-                this.contact_number.value = Math.random() * 100000 | 0;
-                emailjs.sendForm('gmail', 'template_uEfgdvcM', this);
-            });
-        }
-    </script> -->
 </head>
 
 <body class="pace-on pace-flower">
